# python_plugins_examples

./: README.md
plugin_example_01/: README.md  setup.py
plugin_example_01/plugins/anotherone/: anotherone.py  setup.py
plugin_example_01/plugins/super_printer/: setup.py  super_printer.py
plugin_example_02/: LICENSE.txt  README.md  setup.cfg
plugin_example_02/external_plugins/my_external_plugin/: setup.cfg
plugin_example_02/external_plugins/my_external_plugin/src/my_external_plugin/: __main__.py  app.py
plugin_example_02/src/myapp/: app.py
plugin_example_02/src/myapp/plugins/my_internal_plugin/: app.py
