[metadata]
name = my_external_plugin

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8

install_requires =
    fire == 0.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  my_external_plugin = my_external_plugin.__main__:cli
myapp_plugins =
  my_external_plugin = my_external_plugin.app:run